# fov-security

./: .gitignore  Makefile  README.md  initialize.sh  pyproject.toml
analysis/: analyze_fov_graph_models.ipynb  analyze_fov_segmentation_models.ipynb  prepare_fov_dataset.py  show_gt_semseg_data.py  test_fov_model.ipynb  test_mmlab_model.ipynb  test_nuscenes.ipynb  test_polylidar.ipynb  test_ugv.ipynb
analysis/iccps/: model_visualizations.ipynb
analysis/icra/: crossvalidation_analysis.ipynb  dataset_statistics.ipynb  model_visualizations.ipynb  performance_analysis.ipynb  timing_analysis.ipynb  utils.py
analysis/old/: timing_analysis.py
analysis/vehiclesec/: check_models.ipynb  dataset_statistics.ipynb  eval_utils.py  make_dataset_examples.ipynb  model_train_test_analysis.ipynb  model_train_test_table.ipynb  parametric_train_test_analysis.ipynb  test_model_parametric.ipynb
config/segmentation/: unet.py  unet_adversarial.py  unet_mc.py  unet_mc_adversarial.py
fov/: __init__.py  polylidar.py  preprocess.py  train.py
fov/graph/: __init__.py  dataset.py  models.py  preprocess.py
fov/segmentation/: __init__.py  dataset.py  models.py  plotting.py  preprocess.py  utils.py
fov_analysis/: prepare_fov_dataset.py  test_fov_model.ipynb  test_mmlab_model.ipynb  test_polylidar.ipynb
hooks/: pre-commit
scripts/: crossvalidate_segmentation_model.py  make_all_fov_datasets.sh  make_fov_datasets.py  make_segmentation_dataset.py  train_all_segmentation_crossvalidate.sh
scripts/graph/: train_graph_model.py
scripts/segmentation/: make_parametric_configs.py  run_train_all_models.sh  run_train_carla_model_parametric.sh  train_all_segmentation_models.sh  train_segmentation_model.py  visualize_segmentation_dataset.py
(+20 files in other folders)
