[tool.poetry]
name = "fov-security"
version = "0.1.0-alpha.1"
description = "Testing the security of field of view estimation algorithms"
authors = ["Spencer Hallyburton <spencer.hallyburton@duke.edu>"]
readme = "README.md"
license = "MIT"
homepage = "https://avstack.org"
repository = "https://github.com/avstack-lab/avdev-sandbox"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
]
keywords = ["AVstack", "autonomy", "autonomous vehicles"]
include = ["CHANGELOG.md"]
packages = [{include = "fov"}]

[tool.poetry.dependencies]
python = "~3.10"
torch_geometric = "^2.4"
torcheval = "^0"
polylidar = "~1"
# NOTE: torch cluster binary must match the torch version in AVstack....NOTE the 1.13.0 below is ok with 1.13.1 of torch
torch-cluster = [
    {url="https://data.pyg.org/whl/torch-1.13.0%2Bcu117/torch_cluster-1.6.0%2Bpt113cu117-cp310-cp310-linux_x86_64.whl", markers="platform_machine == 'x86_64'"},
]
lib-avstack-api = { path = "submodules/lib-avstack-api", develop = true }
lib-avstack-core = { path = "submodules/lib-avstack-core", extras = ["percep"], develop = true }

[tool.poetry.dev-dependencies]
gdown = "^4.6.4"
ipywidgets = "^8.0"
jupyter = "^1.0.0"

[tool.poetry.group.test.dependencies]
snakeviz="^2.1.1"
pytest = "^7"
pytest-cov = "^4"
bandit = "^1.7"
black = {extras = ["jupyter"], version = "~22.12.0"}
mypy = "^0"
isort = "^5.11"
flake8 = "^5.0"
autoflake = "^1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s"
testpaths = [
    "tests",
    "integration",
]

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
